# ComputationalLib

./: .gitignore  CMakeLists.txt  ComputationalLib-config.cmake  makefile
TestLinearRegression/: TestLinearRegression.vcxproj  TestLinearRegression.vcxproj.filters
TestLinearRegression/Debug/: vc141.idb
TestLinearRegression/Debug/TestLine.BA7B8FF9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestLinearRegression.lastbuildstate
include/ComputationalLib/: CalibrateSin.hpp  CalibrateSinNDimensional.hpp  PolyRegCal.hpp  csv_linreg.hpp  linreg.hpp  multiquad.hpp  poly.hpp  polyreg.hpp  qp.hpp
lib/: calc.cpp  calc.hpp  cmain.cpp  constr.cpp  csv_linreg.cpp  csv_linreg.hpp  linreg.cpp  linreg.hpp  makefile  multiquad.cpp  multiquad.hpp  no_lapack_workaround.cpp  no_lapack_workaround.hpp  poly.cpp  poly.hpp  polyreg.cpp  polyreg.hpp  qp.cpp  qp.hpp
src/: CMakeLists.txt  CalibrateSin.cpp  CalibrateSinNDimensions.cpp  cmake_install.cmake  csv_linreg.cpp  linreg.cpp  multiquad.cpp  poly.cpp  polyreg.cpp  qp.cpp
test/: generator.cpp  lineartest.cpp  lineartest2.cpp  makefile  mintest.cpp  poly2test.cpp  polytest.cpp  testa.cpp  testb.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  CalibrateSinRunner.cpp  CalibrateSinTest.cpp  LinearTest  MinTest  PolyTest  cmake_install.cmake  lineartest.cpp  mintest.cpp  polytest.cpp  tests-CalibrateSin.cpp  tests-CalibrateSinNDimensional.cpp  tests-MaximizerNDimensional.cpp
